[package]
name = "pendulum"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
bevy_rapier2d = { version = "0.19.0", features = [ "simd-stable", "debug-render" ] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
